# irida

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
capi/: CMakeLists.txt
capi/include/irida/: irida.h
cmake/: IridaLayerCheck.cmake  IridaLief.cmake  IridaWarnings.cmake  IridaZydis.cmake
core/transport/include/irida/transport/: gdb_client.hpp
core/transport/src/: gdb_client.cpp
core/transport/tests/: CMakeLists.txt  mock_gdb_server.hpp  test_gdb_client.cpp
docs/guide/: building.md  testing-with-qemu.md  third-party.md
frontends/gui/src/: main.cpp
frontends/mock/tests/: CMakeLists.txt
irida-api/: CMakeLists.txt
irida-api/include/irida/: irida.h
irida-api/src/: backend.hpp  capi.cpp  capi_static.cpp  capi_target.cpp
irida-api/tests/: CMakeLists.txt  test_capi_debug.cpp  test_static.cpp  test_symres.cpp
irida-core/core/analysis/: CMakeLists.txt
irida-core/core/analysis/include/irida/analysis/: analysis.hpp
irida-core/core/analysis/src/: analysis.cpp
irida-core/core/analysis/tests/: CMakeLists.txt  test_analysis.cpp
irida-core/core/backend/: CMakeLists.txt
irida-core/core/backend/include/irida/backend/: backend.hpp  gdb_backend.hpp  native_backend.hpp  types.hpp
irida-core/core/backend/src/: backend.cpp  gdb_backend.cpp  native_backend.cpp  native_backend_factory.cpp
irida-core/core/backend/tests/: CMakeLists.txt  mock_backend.hpp  native_helper_debuggee.cpp  test_mock_backend.cpp  test_native_backend_win.cpp
irida-core/core/binfmt/: CMakeLists.txt
irida-core/core/binfmt/include/irida/binfmt/: binary.hpp  strings.hpp
irida-core/core/binfmt/src/: lief_parser.cpp  strings.cpp
irida-core/core/binfmt/tests/: CMakeLists.txt  test_binfmt.cpp  test_strings.cpp
irida-core/core/disasm/: CMakeLists.txt
irida-core/core/disasm/include/irida/disasm/: disassembler.hpp  instruction.hpp
irida-core/core/disasm/src/: zydis_disassembler.cpp
irida-core/core/disasm/tests/: CMakeLists.txt  test_disasm.cpp
irida-core/core/transport/: CMakeLists.txt
irida-core/core/transport/include/irida/transport/: gdb_client.hpp
irida-core/core/transport/src/: gdb_client.cpp
irida-core/core/transport/tests/: mock_gdb_server.cpp  mock_gdb_server.hpp
irida-core/libs/base/: CMakeLists.txt
irida-core/libs/base/include/irida/base/: bytes.hpp  result.hpp
irida-core/libs/base/src/: log.cpp
irida-core/libs/base/tests/: CMakeLists.txt  test_result.cpp
irida-core/libs/host/: CMakeLists.txt
irida-core/libs/host/include/irida/host/: native_debuggee.hpp
irida-core/libs/host/src/: native_debuggee.cpp  tcp.cpp
irida-core/libs/host/tests/: CMakeLists.txt  test_tcp_loopback.cpp
irida-core/libs/protocol/include/irida/proto/: hex.hpp
irida-core/libs/protocol/src/: hex.cpp  packets.cpp
irida-core/libs/protocol/tests/: test_hex.cpp  test_packets.cpp
irida-ui/cli/: CMakeLists.txt
irida-ui/cli/src/: main.cpp
irida-ui/gui/: CMakeLists.txt
irida-ui/gui/resources/: icons.qrc
irida-ui/gui/src/: disasm_view.cpp  disasm_view.hpp  main_window.cpp  main_window.hpp
irida-ui/gui/src/app/: main.cpp  main_window.cpp  main_window.hpp
irida-ui/gui/src/dialogs/: attach_proc_dialog.cpp  attach_proc_dialog.hpp  load_options_dialog.cpp  load_options_dialog.hpp  welcome_dialog.cpp  welcome_dialog.hpp
irida-ui/gui/src/layouts/: cpu_widget.cpp  cpu_widget.hpp  disassembly_view.cpp  disassembly_view.hpp
irida-ui/gui/src/panels/analysis/: functions_panel.cpp  functions_panel.hpp  xrefs_panel.cpp  xrefs_panel.hpp
irida-ui/gui/src/panels/binfmt/: exports_panel.cpp  exports_panel.hpp  imports_panel.cpp  imports_panel.hpp  sections_panel.cpp  sections_panel.hpp  strings_panel.cpp  strings_panel.hpp  symbols_panel.cpp  symbols_panel.hpp
irida-ui/gui/src/panels/console/: console_panel.cpp  console_panel.hpp
irida-ui/gui/src/panels/disassembly/: disassembly_panel.cpp  disassembly_panel.hpp
irida-ui/gui/src/panels/execution/: backtrace_panel.cpp  backtrace_panel.hpp  breakpoints_panel.cpp  breakpoints_panel.hpp  threads_panel.cpp  threads_panel.hpp
irida-ui/gui/src/panels/graph/: graph_view.cpp  graph_view.hpp
irida-ui/gui/src/panels/memory/: memory_map_panel.cpp  memory_map_panel.hpp  memory_panel.cpp  memory_panel.hpp  stack_panel.cpp  stack_panel.hpp
irida-ui/gui/src/panels/overview/: byte_map_strip.cpp  byte_map_strip.hpp  byte_map_view.cpp  byte_map_view.hpp  byte_overview_panel.cpp  byte_overview_panel.hpp  overview_bar.cpp  overview_bar.hpp
irida-ui/gui/src/panels/registers/: registers_panel.cpp  registers_panel.hpp
irida-ui/gui/src/panels/symbols/: modules_panel.cpp  modules_panel.hpp
irida-ui/gui/src/session/: debug_controller.cpp  debug_controller.hpp
irida-ui/gui/src/theme/: asm_item_delegate.cpp  asm_item_delegate.hpp  asm_tokenizer.cpp  asm_tokenizer.hpp  gutter_delegate.cpp  gutter_delegate.hpp  icons.cpp  icons.hpp  palette.cpp  palette.hpp
irida-ui/gui/src/widgets/: irida_table_view.cpp  irida_table_view.hpp
irida-ui/gui/tests/: CMakeLists.txt  test_asm_tokenizer.cpp  test_cpu_widget.cpp  test_debug_controller.cpp  test_icons.cpp  test_main_window.cpp  test_panels_core.cpp  test_panels_mem.cpp  test_panels_side.cpp  test_table_view.cpp
irida-ui/mock/: CMakeLists.txt
irida-ui/mock/include/irida/mock/: mock_backend.h
irida-ui/mock/src/: mock_backend.cpp
irida-ui/mock/tests/: CMakeLists.txt  test_mock.cpp  test_mock_stepping.cpp
libs/base/include/irida/base/: log.hpp  result.hpp
libs/host/: CMakeLists.txt
libs/host/include/irida/host/: tcp.hpp
libs/host/src/: tcp.cpp
libs/protocol/: CMakeLists.txt
libs/protocol/include/irida/proto/: frame.hpp  hex.hpp  packets.hpp
libs/protocol/src/: frame.cpp  packets.cpp
libs/protocol/tests/: CMakeLists.txt  test_frame.cpp  test_hex.cpp  test_packets.cpp
scripts/: devenv.ps1  tidy.ps1
